# ashu-gpt

./: code_comp.md
backend/: index.js  package-lock.json  package.json  vercel.json
backend/controllers/: AuthContoller.js  InvitationController.js  chatHistoryController.js  customGptController.js
backend/lib/: db.js  utilis.js
backend/middleware/: authMiddleware.js
backend/models/: User.js  UserGptAssignment.js
backend/routes/: authRoutes.js  chatHistory.js  customGptRoutes.js  invitationRoutes.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ProtectedRoute.jsx
frontend/src/components/Admin/: AdminChat.jsx  AdminDashboard.jsx  AdminMessageInput.jsx  AdminSidebar.jsx  AgentCard.jsx  AssignGptsModal.jsx  CategorySection.jsx  CollectionsPage.jsx  CreateCustomGpt.jsx  EditPermissionsModal.jsx  HistoryPage.jsx  InviteTeamMemberModal.jsx  SettingsPage.jsx  TeamManagement.jsx  TeamMemberDetailsModal.jsx  UserHistoryPage.jsx  teamData.js
frontend/src/components/User/: ChatInput.jsx  CollectionsPage.jsx  FavoritesPage.jsx  HistoryPage.jsx  MoveToFolderModal.jsx  SettingsPage.jsx  Sidebar.jsx  UserChat.jsx  UserDashboard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Admin.jsx  UserPage.jsx
python/: KB_indexer.py  README.md  main.py  main_rag_app.py  pyproject.toml  rag.py  requirements.txt
