[project]
name = "mygpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.23",
    "langchain-anthropic>=0.3.10",
    "langchain-cohere>=0.4.3",
    "langchain-core>=0.3.51",
    "langchain-google-genai>=2.1.2",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.0.7",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.25",
    "qdrant-client>=1.13.3",
    "pdfplumber>=0.10.0",
    "python-docx>=1.0.0",
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "tiktoken>=0.5.0",
    "requests>=2.31.0",
    "langchain-text-splitters>=0.0.1",
    "langchain-community>=0.0.13",
    "python-dotenv>=0.21.0",
    "aiohttp>=3.8.0",
    "openai>=1.0.0",
    "langchain-qdrant>=0.0.1",
    "torch>=2.7.0",
    "sentence-transformers>=4.1.0",
    "pypdf>=5.4.0",
    "fastembed>=0.6.1",
]

# Add this section to explicitly list your modules
[tool.setuptools]
py-modules = ["KB_indexer", "main"]
